--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ mdurl==0.1.2
 mpmath==1.3.0
 narwhals==1.26.0
 networkx==3.2.1
-numpy==2.0.2
+numpy>=1.26.1,<2.0.0
 openai_api_key_verifier==1.0.2
 opencv-python==4.11.0.86
 packaging==24.2
@@ -77,7 +77,7 @@ rich==13.9.4
 rpds-py==0.22.3
 rsa==4.9
 safetensors==0.5.2
-scikit-learn==1.6.1
+scikit-learn>=1.3.2,<1.4.2
 scipy==1.13.1
 six==1.17.0
 smmap==5.0.2
@@ -86,7 +86,7 @@ soupsieve==2.6
 streamlit==1.42.0
 streamlit-cookies-controller==0.0.4
 streamlit-cookies-manager==0.2.0
-surya-ocr==0.11.0
+surya-ocr>=0.5.0,<0.6.0
 sympy==1.13.1
 tenacity==9.0.0
 threadpoolctl==3.5.0
