--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -38,7 +38,7 @@ jsonschema-specifications==2024.10.1
 markdown-it-py==3.0.0
 markdown2==2.5.3
 markdownify==0.13.1
-marker-pdf== 0.2.17
+marker-pdf==1.5.5
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mpmath==1.3.0
@@ -49,7 +49,6 @@ openai_api_key_verifier==1.0.2
 opencv-python==4.11.0.86
 packaging==24.2
 pandas==2.2.3
-pdftext==0.3.14
 pillow==10.4.0
 portalocker==2.10.1
 protobuf==5.29.3
@@ -77,7 +76,6 @@ rich==13.9.4
 rpds-py==0.22.3
 rsa==4.9
 safetensors==0.5.2
-scikit-learn>=1.3.2,<1.4.2
 scipy==1.13.1
 six==1.17.0
 smmap==5.0.2
@@ -86,7 +84,6 @@ soupsieve==2.6
 streamlit==1.42.0
 streamlit-cookies-controller==0.0.4
 streamlit-cookies-manager==0.2.0
-surya-ocr>=0.5.0,<0.6.0
 sympy==1.13.1
 tenacity==9.0.0
 threadpoolctl==3.5.0
@@ -102,3 +99,16 @@ urllib3==2.3.0
 watchdog==6.0.0
 wcwidth==0.2.13
 websockets==14.2
+langchain==0.3.19
+langchain-community==0.3.18
+langchain_qdrant==0.2.0
+acres==0.2.0
+ci-info==0.3.0
+configobj==5.0.9
+configparser==7.1.0
+etelemetry==0.3.1
+frontend==0.0.3
+tools==0.1.9
+openai==1.63.2
+tiktoken==0.9.0
+PyMuPDF==1.25.3
