chat only if a game is ingested

--- a/bot/.env
+++ b/bot/.env
@@ -2,8 +2,8 @@ NUM_DOCS_RETRIEVED = 5
 SIMILARITY_THRESHOLD = 0.9
 DECAY = 0.05
 MIN_DOCUMENTS = 5
-USER_ICON = "bot\\icons\\user_icon.png"  # Replace with your user icon
-BOT_ICON = "bot\\icons\\bot_icon.png"  # Replace with your bot icon 
+USER_ICON = "bot/icons/user_icon.png"  # Replace with your user icon
+BOT_ICON = "bot/icons/bot_icon.png"  # Replace with your bot icon 
 COLLECTION_NAME = "automatic_ingestion_v3"
 EMBEDDING_SIZE = 1536
 MONGO_URI = "mongodb://mongodb:27017"
