--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     environment:
       - MONGO_URI=mongodb://mongodb:27017
       - QDRANT_HOST=http://qdrant:6333
+    volumes:
+      - ./bot:/app  # Mount the entire bot directory to /app in the container
     networks:
       - rag_bgg_rag_network
     deploy:
